# vpn-port-forward-manager

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
.github/workflows/: docker-publish.yaml  release.yml  test.yml
src/: apps.rs  configuration.rs  error.rs  main.rs  qbittorrent.rs  rpc.rs
src/apps/: deluge.rs  qbittorrent.rs
