[package]
name = "vpn-port-forward-manager"
version = "0.1.1"
edition = "2024"
authors = ["Kevin Wheelans <kevin.wheelans@proton.me>"]
description = "Updates the listen port for the supported applications to the port forward by the VPN provider"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kwheelans/vpn-port-forward-manager"

[dependencies]
anyhow = { version = "1" }
reqwest = { version = "0.13", features = ["blocking", "form", "json","cookies","gzip"] }
serde = { version = "1", features = ["derive"]}
serde_json = { version = "1"}
strum = { version = "0.28", features = ["derive"]}
tracing = {  version = "0.1" }
tracing-subscriber = {  version = "0.3", features = ["local-time"]}

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = "symbols"
